app_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-dep
  labels:
    app: nodeapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp-dep
  template:
    metadata:
      labels:
        app: nodeapp-dep
    spec:
      containers:
        - name: nodeapp-dep
          image: prajyot25/node-app:1.0.3
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      #     volumeMounts:
      #       - name: storage
      #         mountPath: /data/db
      # volumes:
      #   - name: storage
      #     persistentVolumeClaim:
      #       claimName: nodeapp-pcvol
