app_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp-dep
  type: LoadBalancer  
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
